--- a/modulo1/unidade4/aula1/index.html
+++ b/modulo1/unidade4/aula1/index.html
@@ -5,14 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 1</title>
-    <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="logo.css">
 </head>
 <body>
-    <!-- <div class="box"></div> -->
-    <div class="logo">
+
+    <!-- <div class="logo">
         <div class="maiorq"></div>
         <div class="underline"></div>
+    </div>  -->
+
+    <div class='at-container'>
+        <div class='at-item' >
+            <img src="./63d17e881930f.png" alt="">
+            <h1>Digital <br> College</h1>
+        </div>
     </div>
+
+   
 </body>
 </html>
